--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,5 +1,5 @@
 .banner-area{
-background-image: url('https://i.ibb.co/W5bJ0P3/bannerbackground.png');
+background-image: url('https://img.freepik.com/free-vector/online-shopping-banner-with-3d-shopping-cart-clouds-social-icons-vector-illustration_548887-100.jpg?t=st=1692936889~exp=1692937489~hmac=aff3f9360aa4cc869399d93cf02f68829145ede6c7097c173f7bad6fcb20e49a');
   width: 100%;
   height: 500px;
   background-position: center center;
