--- a/src/components/Auth/Register/Register.css
+++ b/src/components/Auth/Register/Register.css
@@ -5,7 +5,7 @@
   justify-content: center;
   min-height: 100vh;
   margin: 0px;
-  background-image: url('https://i.ibb.co/W5bJ0P3/bannerbackground.png');
+  background-color: #777;
 }
 .f-con {
   margin-bottom: 10px;
